using System.Collections;
using System.Collections.Generic;
using UnityEngine;

    [CreateAssetMenu(fileName = "InstrumentSprites")]
public class InstrumentSprites : ScriptableObject
{
    public Sprite squareSprite;
    public Sprite sawtoothSprite;
    public Sprite sineSprite;
    public Sprite noiseSprite;
}
